--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,10 @@ jobs:
         chmod +x ./proto-gen-doc.sh
         ./proto-gen-doc.sh
 
+    - name: test
+      run: |
+        touch testfile
+
     - name: Commit
       run: |
         git config --local user.email "action@github.com"
